--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
   "scripts": {
     "build": "tsc"
   },
-  "author": "Your Name",
+  "author": "Tomas Dinh",
   "license": "MIT",
-  "peerDependencies": {
-    "react": "^17.0.0"
-  },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "react": "^17.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {
